--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Baking App</string>
     <string name="servings">Servings : %1$d</string>
+    <string name="no_internet_connection">No Internet Connection</string>
+    <string name="no_data_available">No Data Available</string>
 </resources>
