--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="servings">Servings : %1$d</string>
     <string name="no_internet_connection">No Internet Connection</string>
     <string name="no_data_available">No Data Available</string>
+    <string name="no_video_available">No Video Available</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
